@@ -1,8 +1,8 @@
 # The version of the kernel to use.
 
-USERDEVFS=t
-
 KERNELVERSION=2.4.22-r4k-ip22
 KERNEL_FLAVOUR=di
 KERNELNAME=vmlinux
 KERNELIMAGEVERSION=$(KERNELVERSION)
+
+TYPES_SUPPORTED += demo
