@@ -10,6 +10,14 @@ debian-installer (20031213) UNRELEASED; urgency=low
     - If System.map is included in the kernel image udeb, pass it to depmod
       via -F and delete it when done. This is to support building on systems
       running 2.6.
+  * Thiemo Seufer
+    - Build the demo tree only for architectures which support it.
+    - Don't build images for the demo target.
+    - Ensure TYPE=demo for the Makefile's demo target.
+    - Remove stamp files for tree and get_udebs at the begin of their rule,
+      create them at the rule's end.
+    - Ignore errors for the all_clean target.
+    - Don't use USERDEVFS for linux-mips.
 
  -- Joey Hess <joeyh@debian.org>  Sat, 13 Dec 2003 18:44:06 -0500
 
